Fix spacing on pricing, rename to .scss

--- a/source/stylesheets/site/_pricing.scss
+++ b/source/stylesheets/site/_pricing.scss
@@ -59,7 +59,7 @@
       @include span-columns(4);
 
       margin-top: 3em;
-      margin-bottom: 3em;
+      margin-bottom: 2em;
 
       &:nth-child(3n) {
         @include span-columns(4 omega);
